# Django_project1

./: .gitignore  confg.py  data.json  database.ini  pyproject.toml  test.py
config/: settings.py  urls.py
main/: admin.py  forms.py  models.py  servises.py  urls.py  views.py
main/management/commands/: fill.py
main/migrations/: 0001_initial.py  0002_student_is_active.py  0003_subject.py  0004_student_email.py
main/templates/main/: base.html  contact.html  index.html  student_confirm_delete.html  student_detail.html  student_form.html  student_form_with_formset.html  student_list.html
main/templates/main/includes/: inc_main_menu.html  inc_student_card.html
